# chronofund-fundamental-engine

./: .env.example  .gitignore  README.md  pyproject.toml  tickers.csv
examples/: run_bloomberg_ingest.py  run_edgar_snapshot.py  verify_pit_gating.py
paper/: paper_chronofund.tex
src/fundamental_engine/: __init__.py  config.py  config_resolver.py  constants.py  exceptions.py  types.py
src/fundamental_engine/bloomberg/: __init__.py  ingest.py  mapping.py
src/fundamental_engine/bloomberg/parsers/: __init__.py  segments_pdf.py  statement_analysis_pdf.py  xlsx_generic.py
src/fundamental_engine/cli/: __init__.py  main.py
src/fundamental_engine/data/: __init__.py  outputs.py  schema.py  validation.py
src/fundamental_engine/edgar/: __init__.py  cik_map.py  client.py  filings_index.py
src/fundamental_engine/edgar/xbrl/: __init__.py  contexts.py  fetch.py  mapper.py  parser.py
src/fundamental_engine/snapshot/: __init__.py  builder.py  coverage.py  selector.py
src/fundamental_engine/utils/: __init__.py  dates.py  hashing.py  io.py  logging.py  rate_limit.py  retry.py
tests/: conftest.py  test_bloomberg_parser.py  test_cik_mapping.py  test_cutoff_logic.py  test_schema_validation.py  test_xbrl_mapping.py
